Changed colours of headings

--- a/Video2.html
+++ b/Video2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div>
-		<a href="YouTube.html">Home</a>
+		<a href="YouTube.html"><img sre</a>
 		<a href="Video1.html">Summer Lookbook 2018</a>
 		<a href="Video2.html">Zias React</a>
 		<a href="Video3.html">Sober</a>
