--- a/YouTube.html
+++ b/YouTube.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> You Tube Home</title>
+	<title> You Tube</title>
 </head>
 <body>
 	<div>
 		<a href="YouTube.html">Home</a>
-		<a href="Video1.html">Summer Lookbook 2018</a>
-		<a href="Video2.html">Zias React</a>
-		<a href="Video3.html">Sober</a>
 	</div>
-	<h1>YouTube</h1>
+	<h1>YouTube Hellooooooooo</h1>
 	<h2>Recently added videos</h2>
 	<h3>Summer Lookbook 2018</h3>
 	<img src="images/Lookbook" width="800px"> 
