--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div>
+		<div>
 			<a href="index.html">Home</a>
 			<a href="portfolio.html">Portfolio</a>
 		</div>
@@ -31,7 +32,7 @@
 	    	<li>Brand Ambassador</li>
 	    	<li>Student Ambassador</li>
 	    </ol>
-	    1
-	    2
+	    </div>
+	  
 	</body>
 </html>
