changed font of whole page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		Sigourney Hove 
 		</title>
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
 	<body>
 		<div>
