--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 		<h4> Navigation</h4>
 		
 		<div>
-		<div>
-			<a href="index.html">Home</a>
-			<a href="portfolio.html">Portfolio</a>
-		</div>
+			<nav id="main-menu">
+				<a href="index.html">Home</a>
+				<a href="portfolio.html">Portfolio</a>
+			</nav>
 
-		<img src="images/elephant.jpg" width="350px" class="rcorners">
-		<img src="images/elephant.jpg" width="350px" class="rcorners">
-		<img src="images/elephant.jpg" width="350px" class="rcorners">
-		<h1> Portfolio : Sigourney Hove</h1>
-	    <h2>CV</h2>
-	    <h3>Biography</h3>
-	    <p> My name is Sigourney Hove and I study Physics</p>
-	    <h3> Skills that make a good developer</h3>
-	    <ul>
-	    	<li>Intellectually Curious</li>
-	    	<li>Probelm Solver</li>
-	    	<li>Intelligent</li>
-	    </ul>
-	    <h3>Job History</h3>
-	    <ol>
-	    	<li>Fundraiser</li>
-	    	<li>Brand Ambassador</li>
-	    	<li>Student Ambassador</li>
-	    </ol>
+			<img src="images/elephant.jpg" width="350px" class="rcorners">
+			<img src="images/elephant.jpg" width="350px" class="rcorners">
+			<img src="images/elephant.jpg" width="350px" class="rcorners">
+			<h1> Portfolio : Sigourney Hove</h1>
+		    <h2>CV</h2>
+		    <h3>Biography</h3>
+		    <p> My name is Sigourney Hove and I study Physics</p>
+		    <h3> Skills that make a good developer</h3>
+		    <ul>
+		    	<li>Intellectually Curious</li>
+		    	<li>Probelm Solver</li>
+		    	<li>Intelligent</li>
+		    </ul>
+		    <h3>Job History</h3>
+		    <ol>
+		    	<li>Fundraiser</li>
+		    	<li>Brand Ambassador</li>
+		    	<li>Student Ambassador</li>
+		    </ol>
 	    </div>
 	  
 	</body>
