--- a/Video3.html
+++ b/Video3.html
@@ -15,7 +15,7 @@
 
 	<h1> Sober </h1>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/QK7JQl9jNzM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	<p> Vidoe of Mahalia singing her single Sober on Colours</p>
+	<p> Vidoe of Mahalia singing her single Sober on Coloursf3</p>
 
 </body>
 </html>
